--- a/MVCToDoListApp/appsettings.json
+++ b/MVCToDoListApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-FQ21AOL\\SQLEXPRESS;Database=ToDoListAPI;Trusted_Connection=True;TrustServerCertificate=true;"
+  }
 }
